--- a/index.html
+++ b/index.html
@@ -2,6 +2,40 @@
 <html lang="fr">
 <head>
 	<title>Nina Carducci Photographe</title>
+		<script type="application/ld+json">
+		{
+			"@context":"https://schema.org",
+			"@type": "ProfessionalService",
+
+			"name": "Nina Carducci",
+			"description": "Explorez l'univers captivant de la photographie à travers l'objectif de Nina Carducci. Découvrez des moments figés dans le temps, des émotions saisies en images et une vision artistique unique. Plongez dans un monde visuel où la réalité se transforme en art. Bienvenue dans l'œil créatif de Nina Carducci, photographe passionnée.",
+			"@address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"url": "https://jayci17.github.io/NinaCarducci/",
+			"telephone": "0556677889",
+			"openingHoursSpecification": [
+			  {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+				  "Monday",
+				  "Tuesday",
+				  "Wednesday",
+				  "Thursday",
+				  "Friday"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			  }
+			],
+			"sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
+			"priceRange": "Indiquez ici la fourchette de prix, si applicable"
+		}
+	</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
